# inworld-ndk

./: .gitignore  .gitmodules  .licenserc.yaml  CHANGELOG.md  CMakeGDKXbox.cmake  CMakeLists.txt  LICENSE.md  README.md  android-build.bat  android-build.sh  android-gen-shared.sh  android-gen-unity.bat  android-gen-unity.sh  android-gen.bat  android-gen.sh  build-proto.py  cppcheck_suppressions.txt  install-onednn.bat  ios-build-unity.sh  ios-build.sh  ios-gen-shared.sh  ios-gen-unity.sh  ios-gen.sh  mac-build-unity.sh  mac-build.sh  mac-gen-shared.sh  mac-gen-unity.sh  mac-gen.sh  onednn-build.bat  win-build-proto.bat  win-build-unity.bat  win-build.bat  win-cppcheck.bat  win-gen-debug.bat  win-gen-shared-debug.bat  win-gen-shared.bat  win-gen-ue.bat  win-gen-unity.bat  win-gen.bat
.github/workflows/: build-Unity.yml  build-android.yml  build-ios.yml  build-mac.yml  build-win-unity.yml  build-win.yml  header-check.yml  package.yml  release.yml
Example/AndroidApp/: settings.gradle
Example/AndroidApp/app/: build.gradle
Example/AndroidApp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Example/Bak/: ClientWrapper.cpp  ClientWrapper.h  client_wrapper.cpp  client_wrapper.h
Example/Bak/proto/: inworld_ndkData.proto
Example/ConsoleApp/src/: Application.cpp  Application.h  CommandLineInterface.cpp  CommandLineInterface.h  Main.cpp  Microphone.cpp  Microphone.h  PacketHandler.cpp  PacketHandler.h
Example/Unity/: ClientOptions.cpp  ClientOptions.h  NdkData.h  PacketHandler.cpp  PacketHandler.h  UnityClientOptions.cpp  UnityClientOptions.h  UnityInterop.cpp  UnityInterop.h  UnityPacketHandler.cpp  UnityPacketHandler.h  UnityWrapper.cpp  UnityWrapper.h  client_wrapper.cpp  client_wrapper.h
Example/Unity/Data/: UnityAgentInfo.cpp  UnityAgentInfo.h  UnityNDKInteropData.cpp  UnityNDKInteropData.h
Example/Unity/proto/: build-proto.py  inworld_ndkData.pb.cc  inworld_ndkData.pb.h  win-build-proto.bat
Example/Unity_NDK/: client_wrapper.cpp  client_wrapper.h
Example/Unity_NDK/proto/: inworld_ndkData.pb.cc  inworld_ndkData.pb.h  inworld_ndkData.proto
InworldNDK/: CMakeLists.txt
InworldNDK/aec/: BUILD.gn  CMakeLists.txt
InworldNDK/aec/aecplugin/: aec.h
InworldNDK/src/: Client.h  RunnableCommand.cpp
InworldNDK/src/Test/: GTest.cpp
InworldNDK/src/Utils/: Log.cpp  Log.h
InworldNDK/src/proto/: options.grpc.pb.cc  packets.grpc.pb.h  packets.pb.h  voices.grpc.pb.h  world-engine.grpc.pb.cc  world-engine.grpc.pb.h
InworldNDK/src/proto/ai/inworld/studio/v1alpha/: behavioral_contexts.pb.h  characters.grpc.pb.cc  characters.pb.h  errors.grpc.pb.cc  tokens.grpc.pb.cc  tokens.pb.h  users.grpc.pb.cc  users.grpc.pb.h
InworldNDK/src/proto/google/api/: annotations.grpc.pb.cc  http.pb.cc  resource.pb.cc
Prebuilt/Win64/: absl_bad_optional_access.lib  absl_malloc_internal.lib  absl_raw_logging_internal.lib  absl_spinlock_wait.lib  absl_strings.lib  absl_time_zone.lib
Unity_NDK/: client_wrapper.h
Unity_NDK/proto/: inworld_ndkData.proto
aec/: BUILD.gn  CMakeLists.txt  build.py  mac-build.sh  win-build.bat
aec/aecplugin/: aec.cc  aec.h
aec/lib/win64/: webrtc_aec_plugin.dll.lib
inworld-aec/: CMakeLists.txt  mac-arm64-gen.sh  mac-build-for-arch.sh  mac-build-universal.sh  mac-build.sh  mac-gen.sh  mac-x86_64-gen.sh  win-build.bat  win-gen.bat
inworld-aec/prebuilt/win64/: webrtc_aec_plugin.lib
inworld-aec/src/: AECHandle.cpp  AECHandle.h  AECInterop.cpp  AECInterop.h
inworld-stt/: CMakeLists.txt  win-gen.bat
inworld-stt/prebuilt/: Win64
inworld-stt/prebuilt/Win64/: ctranslate2.lib
inworld-stt/src/: InworldSTT.cpp  InworldSTT.h  Main.cpp
inworld-vad/: CMakeLists.txt  mac-build-arm64.sh  mac-build-onnx.sh  mac-build-x86_64.sh  mac-build.sh  mac-gen-x86_64.sh  mac-gen.sh  mac-lipo.sh  win-gen.bat
inworld-vad/prebuilt/Win64/: inworld-ndk-vad.dll.lib
inworld-vad/src/: InworldVAD.cpp  InworldVAD.h  Main.cpp
src/: AECFilter.cpp  AECFilter.h  Application.cpp  Application.h  AsyncRoutine.h  Client.cpp  Client.h  CommandLineInterface.cpp  GrpcHelpers.cpp  GrpcHelpers.h  Main.cpp  Packets.cpp  Packets.h  Runnable.h  RunnableCommand.cpp  RunnableCommand.h  STT.h  STTWhisperCpp.cpp  Service.cpp  Service.h  Types.h  client_wrapper.cpp  client_wrapper.h
src-proto/google/api/: visibility.grpc.pb.cc  visibility.grpc.pb.h  visibility.pb.cc  visibility.pb.h
src-proto/nvidia/a2f/: nvidia_ace.a2f.v1.grpc.pb.cc  nvidia_ace.a2f.v1.grpc.pb.h  nvidia_ace.a2f.v1.pb.cc  nvidia_ace.a2f.v1.pb.h  nvidia_ace.animation_data.v1.grpc.pb.cc  nvidia_ace.animation_data.v1.grpc.pb.h  nvidia_ace.animation_data.v1.pb.cc  nvidia_ace.animation_data.v1.pb.h  nvidia_ace.animation_id.v1.grpc.pb.cc  nvidia_ace.audio.v1.pb.cc  (+22 more)
src/Private/: AECFilter.cpp  AECFilter.h  AsyncRoutine.cpp  Client.cpp  ClientSpeechProcessor.cpp  GrpcHelpers.cpp  Packets.cpp  Service.cpp  Service.h  StudioClient.cpp
src/Public/: AECFilter.h  AsyncRoutine.h  Client.h  ClientSpeechProcessor.h  Define.h  GrpcHelpers.h  Packets.h  Runnable.h  StudioClient.h  Types.h
src/Test/: GTest.cpp
src/Utils/: AudioSessionDumper.cpp  AudioSessionDumper.h  Log.cpp  Log.h  PerceivedLatencyTracker.cpp  PerceivedLatencyTracker.h  SharedQueue.h  SslCredentials.h  Utils.cpp  Utils.h
src/proto/: anim_controller.grpc.pb.cc  anim_controller.grpc.pb.h  anim_controller.pb.cc  anim_controller.pb.h  anim_data.grpc.pb.cc  anim_data.grpc.pb.h  anim_data.pb.cc  anim_data.pb.h  audio_data.grpc.pb.cc  audio_data.grpc.pb.h  audio_data.pb.cc  audio_data.pb.h  base_voice.grpc.pb.cc  base_voice.grpc.pb.h  base_voice.pb.cc  base_voice.pb.h  configuration.grpc.pb.cc  configuration.grpc.pb.h  configuration.pb.cc  configuration.pb.h  inworld_ndkData.pb.cc  inworld_ndkData.pb.h  inworld_ndkData.proto  language_codes.grpc.pb.cc  language_codes.grpc.pb.h  language_codes.pb.cc  language_codes.pb.h  options.grpc.pb.h  options.pb.cc  options.pb.h  packets.grpc.pb.cc  packets.pb.cc  packets.pb.h  voices.grpc.pb.cc  voices.pb.cc  voices.pb.h  world-engine.grpc.pb.cc  world-engine.grpc.pb.h  world-engine.pb.cc  world-engine.pb.h
test-vad/: silero-vad-onnx.cpp
(+304 files in other folders)
